# brief-my-trade

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh  start.sh  stop.sh
src/brief_my_trade/: __init__.py  bot.py  notion.py  parser.py  price.py  report.py  report_cron.py  store.py  ta.py  trailing.py  trailing_cron.py
tests/: conftest.py  test_parser.py  test_price.py  test_store.py  test_ta.py
